# BankingaApp

./: .coverage  .flake8  pyproject.toml
src/: external_API.py  get_info_tabel.py  report.py  services.py  views.py
tests/: conftest.py  test_external_API.py  test_get_info_tabel.py  test_report.py  test_services.py
